# figure-composer

./: .gitignore  CONTEXT.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.codex-tasks/20260514-mvp-hardening-epic/: EPIC.md  PROGRESS.md  SUBTASKS.csv
.codex-tasks/20260514-mvp-usability-polish/: PROGRESS.md  SPEC.md  TODO.csv
.codex-tasks/20260514-roi-on-insets-and-integer-fields/: PROGRESS.md  SPEC.md  TODO.csv
.codex-tasks/20260514-workspace-import-export-polish/: PROGRESS.md  SPEC.md  TODO.csv
docs/: SDD.md
docs/adr/: 0001-react-typescript-konva-tauri.md  0002-folder-package-project-format.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  project_folder.rs
src/app/: App.css  App.tsx  AppToolbar.tsx  ExportDialog.css  ExportDialog.tsx  ExportPresetEditor.tsx  ExportPreview.tsx  FigureLayoutEditor.tsx  InsetDockControls.tsx  Inspector.tsx  SelectionPanel.css  SelectionPanel.tsx  SourceImageList.css  SourceImageList.tsx  Workspace.css  Workspace.tsx  exportFigureHandlers.ts  sourceImageHandlers.ts  sourceImageImport.test.ts  sourceImageImport.ts  useEditorShortcuts.ts  useFigureComposerController.ts  useWorkspaceImageDrop.ts  useWorkspacePanelSizing.ts  visibleErrors.ts
src/editor/canvas/: CanvasResizeHandle.tsx  FigureStage.tsx  ObjectRenderer.tsx  PlacementGuideOverlay.tsx  RoiFrameRenderer.tsx  editorChrome.ts  objectPlacementInteractions.ts  (+1 more)
src/platform/: appPlatform.ts  runtimePlatform.ts
(+71 files in other folders)
