[package]
name = "figure-composer"
version = "0.1.0"
description = "Desktop shell for Figure Composer"
authors = ["Figure Composer contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "figure_composer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
